# melissia-bc-ical

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: update-calendars.yml
src/: generate_calendars.py
templates/: index.html.j2
