[project]
name = "melissia-bc-calendar"
version = "0.1.0"
description = "Generate iCal files for Melissia BC basketball schedules"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "icalendar>=5.0.0",
    "lxml>=4.9.0",
    "pytz>=2023.3",
    "jinja2>=3.1.0",
]

[tool.uv]
dev-dependencies = []
